[package]
name = "granne_c"
version = "0.1.0"
edition = "2021"

[dependencies]
granne = "0.5.2"
safer-ffi = { version = "*", features = ["proc_macros"] }
lazy_static = "1.4.0"

[lib]
name = "granne_c"
crate-type = ["staticlib"]

[features]
c-headers = ["safer-ffi/headers"]

# https://github.com/danielhenrymantilla/mini_paste/commit/69f4e5e0784d05fecaaca7ec8d8ed0a13f407472
[patch.crates-io.mini_paste]
git = "https://github.com/danielhenrymantilla/mini_paste.git"
rev = "69f4e5e0784d05fecaaca7ec8d8ed0a13f407472"
